--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -63,6 +63,8 @@
     <Compile Include="Abstract\IImageFileService.cs" />
     <Compile Include="Abstract\IMessageService.cs" />
     <Compile Include="Abstract\IWriterService.cs" />
+    <Compile Include="Abstract\SkillService.cs" />
+    <Compile Include="Abstract\UserService.cs" />
     <Compile Include="Concrate\AboutManager.cs" />
     <Compile Include="Concrate\AdminManager.cs" />
     <Compile Include="Concrate\CategoryManager.cs" />
@@ -71,10 +73,13 @@
     <Compile Include="Concrate\HeadingManager.cs" />
     <Compile Include="Concrate\ImageFileManager.cs" />
     <Compile Include="Concrate\MessageManager.cs" />
+    <Compile Include="Concrate\SkillManager.cs" />
+    <Compile Include="Concrate\UserManager.cs" />
     <Compile Include="Concrate\WriterManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValidationRules\FluentValidation\CategoryValidator.cs" />
     <Compile Include="ValidationRules\FluentValidation\HeadingValidator.cs" />
+    <Compile Include="ValidationRules\FluentValidation\MessageValidator.cs" />
     <Compile Include="ValidationRules\FluentValidation\WriterValidator.cs" />
   </ItemGroup>
   <ItemGroup>
